--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="title_news">Articles</string>
     <string name="title_settings">Settings</string>
     <string name="title_notifications">Notifications</string>
-    <string name="sample_title_articles">Tip dan Trik Cara memilih ISP</string>
+    <string name="sample_title_articles">Tips dan Trik Cara Memilih Internet Service Provider</string>
     <string name="sample_publish_date">01 Januari 2023</string>
     <string name="sample_description_articles">Memilih ISP adalah hal yang penting dalam kehidupan sekarang, dikarenakan kebanyakan ter-digitalisasi maka dibutuhkan koneksi yang handal untuk memperoleh koneksi internet yang stabil.</string>
     <string name="see_more">Artikel lainnya</string>
