--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Capstone Project</string>
+    <string name="app_name">Wownet</string>
     <string name="title_home">Home</string>
     <string name="title_news">Articles</string>
     <string name="title_settings">Settings</string>
